syntax = "proto3";

package users;

service Users {
  rpc GetAllUsers(Empty) returns (GetAllUsersResponse);
  rpc GetUserByUUID(GetUserByUUIDRequest) returns (GetUserByUUIDResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message Empty {}

message User {
  string uuid = 1;
  string name = 2;
  string lastname = 3;
  string email = 4;
  string role = 5;
  string createdAt = 6;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByUUIDRequest {
  string uuid = 1;
}

message GetUserByUUIDResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
  string lastname = 2;
  string email = 3;
  string password = 4;
  string passwordConfirm = 5;
  string role = 6;
}

message CreateUserResponse {
  User user = 1;
  string token = 2;
}

message UpdateUserRequest {
  string uuid = 1;
  string name = 2;
  string lastname = 3;
  string email = 4;
}

message UpdateUserResponse {
  User user = 1;
  string token = 2;
}

message DeleteUserRequest {
  string uuid = 1;
}

message DeleteUserResponse {
  // Empty for now, can add fields if needed
}
